VendorCalc/force-app/main/default/objects/Relationships__c/fields/Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>