VendorCalc/force-app/main/default/objects/Relationships__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarantor</label>
    <type>Checkbox</type>
</CustomField>