VendorCalc/force-app/main/default/objects/Relationships__c/fields/Primary_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Primary_Ownership_Percentage__c</fullName>
    <label>Primary Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>