VendorCalc/force-app/main/default/objects/Relationships__c/fields/Reciprocal_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Ownership_Percentage__c</fullName>
    <label>Reciprocal Ownership Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>