VendorCalc/force-app/main/default/objects/Relationships__c/fields/Record_Name1__c.field-meta.xml
<CustomField>
    <fullName>Record_Name1__c</fullName>
    <formula>IF(RecordType.DeveloperName=&#39;Account_Relationship&#39;, Related_Account__r.Name , 
(IF(RecordType.DeveloperName=&#39;Contact_Relationship&#39;, Related_Contact__r.FirstName&amp;&quot; &quot;&amp; Related_Contact__r.LastName , 
(IF(RecordType.DeveloperName=&#39;Opportunity_Relationship&#39;, Related_Application__r.Name, NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>