VendorCalc/force-app/main/default/objects/Relationships__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships (Related Account)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>