VendorCalc/force-app/main/default/objects/Relationships__c/fields/Related_Application__c.field-meta.xml
<CustomField>
    <fullName>Related_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Relationships (Related Application)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>