VendorCalc/force-app/main/default/objects/Relationships__c/fields/Strength_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Strength_of_Relationship__c</fullName>
    <label>Strength of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Terminated/Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>