VendorCalc/force-app/main/default/objects/Relationships__c/recordTypes/Account_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Account_Relationship</fullName>
    <active>true</active>
    <label>Account Relationship</label>
</RecordType>