VendorCalc/force-app/main/default/objects/Relationships__c/recordTypes/Contact_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Contact_Relationship</fullName>
    <active>true</active>
    <label>Contact Relationship</label>
</RecordType>