VendorCalc/force-app/main/default/objects/Relationships__c/recordTypes/Opportunity_Relationship.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Relationship</fullName>
    <active>true</active>
    <label>Opportunity Relationship</label>
</RecordType>