VendorCalc/force-app/main/default/objects/Relationships__c/recordTypes/Security_Ownership.recordType-meta.xml
<RecordType>
    <fullName>Security_Ownership</fullName>
    <active>true</active>
    <label>Security Ownership</label>
</RecordType>